fixtures/parser/valid/declare.php
<?php
declare(strict_types=1);

declare(ticks=1) {
    echo "block";
}

declare(ticks=1):
    echo "alternative";
enddeclare;
