fixtures/parser/invalid/control_flow_invalid.php
<?php
// invalid: alternative if statement is missing endif

if ($ready):
    echo "ready";
else:
    echo "not ready";
